--- a/styles/Banner.module.css
+++ b/styles/Banner.module.css
@@ -134,7 +134,7 @@
   text-align: center;
   padding: 0 0px;
   cursor: pointer;
-  background-image: linear-gradient(rgba(219, 219, 219, 0.507), rgba(255, 255, 255, 0.5)), url('/hoy.png');     ;
+  background-image: linear-gradient(rgba(219, 219, 219, 0.507), rgba(255, 255, 255, 0.5));
   background-size: 3%;
 }
 .containerIframeBody iframe {
